@startuml
class it.polimi.ingsw.VirtualModel.ShelvesRepresentation {
- Map<String,ShelfMTC> SHELF_MESSAGES
- {static} ShelvesRepresentation instance
+ {static} ShelvesRepresentation getInstance()
+ void updateShelf(ShelfMTC)
+ ShelfMTC getShelfMessage(String)
}
class it.polimi.ingsw.VirtualModel.ChatRepresentation {
- ArrayList<ChatMTC> CHAT
- {static} ChatRepresentation instance
+ {static} ChatRepresentation getInstance()
+ ArrayList<ChatMTC> getMessages()
+ void addMessage(ChatMTC)
}
interface it.polimi.ingsw.VirtualModel.VirtualModelObserver {
~ void update()
}
class it.polimi.ingsw.VirtualModel.TilesTableRepresentation {
- {static} TilesTableRepresentation instance
- ChosenTilesTableMTC tilesTableMessage
+ {static} TilesTableRepresentation getInstance()
+ void updateTable(ChosenTilesTableMTC)
+ List<ItemTile> getTiles()
}
abstract class it.polimi.ingsw.VirtualModel.VirtualModelSubject {
# List<VirtualModelObserver> observers
+ void registerObserver(VirtualModelObserver)
+ void removeObserver(VirtualModelObserver)
+ void notifyObservers()
}
class it.polimi.ingsw.VirtualModel.BoardRepresentation {
- ItemTile[][] board
- {static} BoardRepresentation instance
+ {static} BoardRepresentation getInstance()
+ void setBoard(BoardMTC)
+ void setBoard(ItemTile[][])
+ ItemTile[][] getBoard()
+ Color[][] getBoardColors()
}
class it.polimi.ingsw.VirtualModel.EchosRepresentation {
- Stack<EchoMTC> messages
- {static} EchosRepresentation instance
+ {static} EchosRepresentation getInstance()
+ void putMessage(EchoMTC)
+ EchoMTC popMessage()
+ EchoMTC peekMessage()
+ void clean()
}
class it.polimi.ingsw.VirtualModel.PlayersRepresentation {
- Map<String,PlayerMTC> PLAYER_MESSAGES
- {static} PlayersRepresentation instance
+ {static} PlayersRepresentation getInstance()
+ ArrayList<String> getPlayersList()
+ int getPlayerScore(String)
+ PlayerMTC getPlayerInfoByNickname(String)
+ ArrayList<PlayerMTC> getAllPlayerMTC()
+ void updatePlayer(PlayerMTC)
}
class it.polimi.ingsw.VirtualModel.CommonGoalsRepresentation {
- {static} CommonGoalsRepresentation instance
- CommonGoalMTC commonGoalMessage
+ {static} CommonGoalsRepresentation getInstance()
+ void updateCommonGoal(CommonGoalMTC)
+ ArrayList<String> getCardNames()
+ CommonGoalMTC getCommonGoalMessage()
+ ArrayList<Integer> getAvailablePoints()
}
class it.polimi.ingsw.VirtualModel.GameRepresentation {
- GameMTC gameMessage
- {static} GameRepresentation instance
+ {static} GameRepresentation getInstance()
+ void setGame(GameMTC)
+ int getMAX_PLAYER_NUMBER()
+ int getGameID()
+ GameState getGameState()
+ String getActivePlayerNickname()
+ GameMTC getGameMessage()
}


it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.ShelvesRepresentation
it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.ChatRepresentation
it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.TilesTableRepresentation
it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.BoardRepresentation
it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.EchosRepresentation
it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.PlayersRepresentation
it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.CommonGoalsRepresentation
it.polimi.ingsw.VirtualModel.VirtualModelSubject <|-- it.polimi.ingsw.VirtualModel.GameRepresentation
@enduml